tests/macros/input/page_size.stderr
error: option `page_size` does not exist for kind `input`
 --> $DIR/page_size.rs:2:35
  |
2 |     discourse::questions![Input { page_size: todo!() }];
  |                                   ^^^^^^^^^
