tests/macros/input/page_size.rs
fn main() {
    discourse::questions![Input { page_size: todo!() }];
}
